--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,253 @@
-/* You can add global styles to this file, and also import other style files */
+$font: 'Exo 2', sans-serif;
+$dark: #0C2326;
+$lightgray: #C7C7C7;
+$transition: 0.25s ease;
+$skyblue: #14A0B1;
+$midblue: #265D64;
+
+script { display: none !important; }
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: $font;
+}
+
+h1, h2, h3, h4, h5, h6 { font-weight: normal; }
+
+%block-between {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+%block-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+body { position: relative; }
+
+header {
+	background-color: rgba(12, 35, 38, 0.85);
+	padding: 0 25px;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+	@extend %block-between;
+	& > * {
+		@extend %block-center;
+		ul {
+			margin: 0;
+			li {
+				line-height: 100px;
+			}
+		}
+	}
+	& > div ul {
+		@extend %block-center;
+		list-style: none;
+	}
+	#language {
+		margin-right: 10px;
+		.divisor { color: $dark; }
+		li {
+			color: $skyblue;
+			font-size: 18px;
+			text-transform: uppercase;
+			margin: 0 5px;
+			cursor: pointer;
+		}
+	}
+	#menu-header {
+		margin: 0;
+		li {
+			line-height: 100px;
+			list-style: none;
+			a {
+				display: block;
+				width: 100%;
+				height: 100%;
+				padding: 0 30px;
+				font-size: 13px;
+				text-decoration: none;
+				color: $lightgray;
+				text-transform: uppercase;
+				box-sizing: border-box;
+				transition: $transition;
+				&:hover {
+					-webkit-box-shadow: inset 0px -5px 0px 0px $skyblue;
+					-moz-box-shadow: inset 0px -5px 0px 0px $skyblue;
+					box-shadow: inset 0px -5px 0px 0px $skyblue;
+				}
+			}
+		}
+	}
+	& > div {
+		#media {
+			@each $class, $color in (envelope, #B5B5B5), (google, #DD4C3B), (facebook, #4267B2), (youtube, #C93030) {
+				a {
+					font-size: 14px;
+					display: block;
+					line-height: 40px;
+					width: 40px;
+					text-align: center;
+					border: 1px solid;
+					border-radius: 12px;
+					margin-left: 5px;
+					transition: $transition;
+					&.#{$class} {
+						border-color: $color;
+						color: $color;
+						&:hover {
+							border-radius: 50%;
+							background-color: $color;
+							color: #fff;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+footer {
+	@extend %block-center;
+	background-color: $dark;
+	color: #fff;
+	line-height: 75px;
+	font-size: 14px;
+	a {
+		display: block;
+		line-height: 100%;
+		&:nth-child(2) {
+			border-right: 1px solid #fff;
+			padding-right: 20px;
+			margin: 20px;
+		}
+	}
+}
+
+#load-language {
+	background-image: url(./assets/bg-loading.png);
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	color: #fff;
+	@extend %block-center;
+	flex-direction: column;
+	#loader {
+		display: block;
+		width: 160px;
+		height: 160px;
+		@extend %block-center;
+		position: relative;
+		img {
+			position: absolute;
+			top: -120px;;
+			left: -390px;
+		}
+	}
+	h3 {
+		margin-top: 30px;
+		font-size: 40px;
+	}
+}
+
+#banner {
+	position: relative;
+		height: 100vh;
+		background-color: $dark;
+	.banner {
+		height: 100%;
+		padding-top: 100px;
+		@extend %block-center;
+		flex-direction: column;
+		color: #fff;
+		background-position: center center;
+		background-attachment: fixed;
+		background-size: cover;
+		position: absolute;
+		width: 100%;
+		opacity: 0;
+		transition: 2s;
+		@each $index, $background in (1, banner-1), (2, banner-2) {
+			&.banner-#{$index} { background-image: url(./assets/#{$background}.png) }
+		}
+		&.active {
+			opacity: 1;
+		}
+		h3 {
+			font-size: 50px;
+			font-weight: 700;
+			max-width: 750px;
+			text-align: center;
+		}
+		a {
+			display: block;
+			width: 200px;
+			line-height: 46px;
+			color: $skyblue;
+			border: 2px solid $skyblue;
+			border-radius: 12px;
+			text-align: center;
+			text-decoration: none;
+			margin-top: 30px;
+			transition: $transition;
+			&:hover {
+				border-radius: 25px;
+			}
+		}
+	}
+	#dots {
+		position: absolute;
+		width: 100%;
+		bottom: 60px;
+		z-index: 3;
+		@extend %block-center;
+		.dot {
+			display: block;
+			width: 23px;
+			height: 23px;
+			border: 2px solid $skyblue;
+			border-radius: 50%;
+			margin: 0 3px;
+			transition: $transition;
+			&.active { background-color: $skyblue; }
+		}
+	}
+	#gobot {
+		position: absolute;
+		bottom: 20px;
+		left: calc(50% - 17.5px);
+		opacity: 0.5;
+		cursor: pointer;
+		animation: gobot 2s infinite;
+		z-index: 3;
+		@keyframes gobot {
+			to { transform: translateY(5px); }
+			from { transform: translateY(-5px); }
+		}
+	}
+	.direction {
+		display: none;
+		position: absolute;
+		font-size: 45px;
+		color: $skyblue;
+		opacity: 0.5;
+		top: calc(50% + 25px);
+		transition: $transition;
+		cursor: pointer;
+		z-index: 3;
+		&#prev { left: 15px; }
+		&#next { right: 15px; }
+		&:hover { opacity: 1; }
+		&:active { transform: scale(0.8); }
+	}
+}
