--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
 		<img src="{{resourcesImage}}logo-akros.png" alt="Logo Akros Studio">
 	</a>
 	<a href="https://gabrielsanchez7.github.io/pagina-personal/" target="_blank">
-		<img src="../assets/logo-gs.png" alt="Gabriel S&aacute;nchez">
+		<img src="{{resourcesImage}}logo-gs.png" alt="Gabriel S&aacute;nchez">
 	</a>
 </footer>
