--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header>
 	<a [routerLink]="['/']"><img src="{{resourcesImage}}logo-principal.png" alt="Logo Du Gibloux"></a>
 	<ul id="menu-header">
-		<li *ngFor="let menu of data.menu"><a href="{{menu.url}}">{{menu.item}}</a></li>
+		<li *ngFor="let menu of data.menu"><a id="{{menu.item}}" (click)="goMenu($event)" href="{{menu.url}}">{{menu.item}}</a></li>
 	</ul>
-	<div>
+	<div class="here">
 		<ul id="language" (click)="selectLanguage($event);">
 			<li id="fra">FR</li>
 			<li class="divisor">|</li>
@@ -14,6 +14,25 @@
 			<li><a class="google" href=""><i class="fa fa-google-plus"></i></a></li>
 			<li><a class="facebook" href=""><i class="fa fa-facebook"></i></a></li>
 			<li><a class="youtube" href=""><i class="fa fa-youtube-play"></i></a></li>
+		</ul>
+	</div>
+	<div id="burguer-menu" (click)="showMenuResponsive()" class="fa fa-bars"></div>
+	<div id="responsive-header" (click)="clickMenuResponsive($event)">
+		<div>
+			<ul id="language-responsive" (click)="selectLanguage($event);">
+				<li id="fra">FR</li>
+				<li class="divisor">|</li>
+				<li id="esp">ES</li>
+			</ul>
+			<ul id="media-responsive">
+				<li><a class="envelope" href=""><i class="fa fa-envelope"></i></a></li>
+				<li><a class="google" href=""><i class="fa fa-google-plus"></i></a></li>
+				<li><a class="facebook" href=""><i class="fa fa-facebook"></i></a></li>
+				<li><a class="youtube" href=""><i class="fa fa-youtube-play"></i></a></li>
+			</ul>
+		</div>
+		<ul id="menu-responsive">
+			<li *ngFor="let menu of data.menu"><a id="{{menu.item}}" (click)="goMenu($event)" href="{{menu.url}}">{{menu.item}}</a></li>
 		</ul>
 	</div>
 </header>
@@ -29,3 +48,7 @@
 		<img src="{{resourcesImage}}logo-gs.png" alt="Gabriel S&aacute;nchez">
 	</a>
 </footer>
+
+<div id="msg-language">
+	<p><span class="fa fa-times" (click)="closeModal($event)"></span>{{data.messageLanguage}}</p>
+</div>
