--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,10 @@ p {
 	}
 }
 
-body { position: relative; }
+html, body {
+	position: relative;
+	overflow-x: hidden;
+}
 
 .container {
 	max-width: 1300px;
@@ -70,11 +73,16 @@ header {
 	position: absolute;
 	top: 0;
 	width: 100%;
-	z-index: 2;
+	z-index: 5;
+	img { transition: $transition; }
+	& > a {
+		min-width: 225px;
+		justify-content: flex-start;
+	}
 	@extend %block-between;
 	& > * {
 		@extend %block-center;
-		ul {
+		.media {
 			margin: 0;
 			li {
 				line-height: 100px;
@@ -144,6 +152,111 @@ header {
 					}
 				}
 			}
+		}
+	}
+	#burguer-menu {
+		display: none;
+		color: $midblue;
+		line-height: 38px;
+		width: 40px;
+		text-align: center;
+		border: 1px solid $midblue;
+		border-radius: 8px;
+		transition: $transition;
+		cursor: pointer;
+		&:active {
+			border-radius: 50%;
+			background-color: $midblue;
+			color: #fff;
+		}
+	}
+	#responsive-header {
+		display: none;
+		position: absolute;
+		max-width: 300px;
+		width: 100%;
+		background-color: rgba(12, 35, 38, 0.85);
+		color: #fff;
+		top: 68px;
+		right: 25px;
+		flex-direction: column;
+		border-radius: 5px;
+		overflow: hidden;
+		#menu-responsive {
+			flex-direction: column;
+			width: 100%;
+			padding: 10px;
+			li {
+				line-height: 40px;
+				width: 100%;
+				&:not(:last-child) { border-bottom: 1px solid rgba(38, 93, 100, 0.25); }
+				a {
+					text-decoration: none;
+					color: #fff;
+					font-weight: 300;
+					width: 100%;
+					display: block;
+					text-align: center;
+					&:active {
+						background-color: $textgray;
+						color: $dark;
+						font-weight: 400;
+					}
+				}
+			}
+		}
+		& > div {
+			@extend %block-between;
+			width: 100%;
+			#language-responsive {
+				width: 35%;
+				text-align: center;
+				.divisor { margin: 0 10px; }
+			}
+			#media-responsive {
+				width: 65%;
+				@extend %block-between;
+				li {
+					width: 100%;
+					line-height: 40px;
+					text-align: center;
+					@each $class, $color in (envelope, #B5B5B5), (google, #DD4C3B), (facebook, #4267B2), (youtube, #C93030) {
+						a.#{$class} {
+							width: 100%;
+							height: 100%;
+							display: block;
+							background-color: $color;
+							color: #fff;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+#msg-language {
+	position: fixed;
+	top: 10px;
+	z-index: 10;
+	width: 100%;
+	p {
+		display: none;
+		background-color: #266430;
+		color: #fff;
+		max-width: 500px;
+		width: 100%;
+		margin: auto;
+		text-align: center;
+		padding: 20px;
+		border-radius: 5px;
+		position: relative;
+		.fa {
+			position: absolute;
+			top: 8px;
+			right: 8px;
+			font-size: 12px;
+			cursor: pointer;
 		}
 	}
 }
@@ -291,7 +404,7 @@ footer {
 }
 
 #description {
-	padding: 80px 0;
+	padding-top: 80px;
 	& > div:not(.benefit) {
 		@extend %block-between;
 		background-color: $bordercolor;
@@ -338,6 +451,7 @@ footer {
 }
 
 #appartaments {
+	padding-top: 80px;
 	.list-appartament {
 		margin-top: 80px;
 		@extend %block-center;
@@ -348,6 +462,8 @@ footer {
 			border: 1px solid $bordercolor;
 			cursor: pointer;
 			position: relative;
+			width: 100%;
+			& * { width: 100%; }
 			img {
 				height: 100%;
 				display: block;
@@ -374,7 +490,7 @@ footer {
 				.fa {
 					color: $skyblue;
 					display: block;
-					line-height: 80px;
+					line-height: 78px;
 					width: 80px;
 					text-align: center;
 					border: 1px solid $skyblue;
@@ -453,7 +569,7 @@ footer {
 }
 
 #situation {
-	margin: 80px auto;
+	padding-top: 80px;
 	.city {
 		@extend %block-between;
 		margin: 40px 0;
@@ -515,7 +631,7 @@ footer {
 	}
 	.conclusion {
 		@extend %block-between;
-		padding: 40px;
+		padding: 40px 0 80px 0;
 		& > div:first-child {
 			background-color: $bordercolor;
 			max-width: 420px;
@@ -608,7 +724,6 @@ footer {
 				font-weight: 300;
 				transition: $transition;
 				&:focus { border-color: $skyblue; }
-				&::placeholder { color: rgba(255, 255, 255, 0.3); }
 			}
 			textarea {
 				width: 100%;
@@ -620,7 +735,6 @@ footer {
 				background-color: transparent;
 				color: #fff;
 				&:focus { border-color: $skyblue; }
-				&::placeholder { color: rgba(255, 255, 255, 0.3); }
 			}
 			input[type="submit"] {
 				max-width: 200px;
@@ -641,6 +755,40 @@ footer {
 				&:focus, &:hover {
 					background-color: $skyblue;
 					border-color: $skyblue;
+				}
+			}
+			label, textarea {
+				position: relative;
+				width: 100%;
+				display: block;
+				span {
+					position: absolute;
+					top: 0;
+					line-height: 35px;
+					color: rgba(255, 255, 255, 0.3);
+					cursor: text;
+					transition: $transition;
+				}
+				i {
+					position: absolute;
+					line-height: 28px;
+					width: 30px;
+					text-align: center;
+					border: 1px solid $bordercolor;
+					border-radius: 50%;
+					top: 0;
+					right: -35px;
+					font-size: 14px;
+					opacity: 0;
+					transition: $transition;
+					&.fa-check {
+						color: #71bf71;
+						border-color: #71bf71;
+					}
+					&.fa-times {
+						color: #8c1414;
+						border-color: #8c1414;
+					}
 				}
 			}
 		}
@@ -721,4 +869,117 @@ footer {
 			}
 		}
 	}
+}
+
+#msg-form {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	text-align: center;
+	top: 20px;
+	z-index: 10;
+	p {
+		display: none;
+		color: #fff;
+		max-width: 500px;
+		width: 100%;
+		margin: auto;
+		padding: 20px;
+		border-radius: 5px;
+		position: relative;
+		&.valid { background-color: #266430; }
+		&.no-valid { background-color: #bd1c1c; }
+		.fa {
+			position: absolute;
+			top: 8px;
+			right: 8px;
+			cursor: pointer;
+			font-size: 12px;
+		}
+	}
+}
+
+@media screen and (max-width: 1350px) {
+	.container { width: 97%; }
+}
+
+@media screen and (max-width: 1300px) {
+	header {
+		min-height: 65px;
+		img { width: 140px !important; }
+		#menu-header, .here { display: none; }
+		#burguer-menu { display: block; }
+	}
+}
+
+@media screen and (max-width: 1250px) {
+	#description > div:not(.benefit) {
+		flex-direction: column;
+		img { width: 100%; }
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	#contact .cont-form {
+		flex-direction: column;
+		form { margin: 0; }
+		iframe { margin-top: 50px; }
+	}
+	#info-contact {
+		& > div { flex-direction: column; }
+		ul { margin-bottom: 50px; }
+	}
+	#prices div {
+		flex-direction: column;
+		article { margin-bottom: 15px; }
+	}
+}
+
+@media screen and (max-width: 730px) {
+	#banner {
+		article {
+			h3 {
+				font-size: 30px !important;
+			}
+			a {
+				font-size: 14px !important;
+				line-height: 34px !important;
+				width: 170px !important;
+				border-radius: 6px;
+			}
+		}
+	}
+	#contact { padding: 40px 10px; }
+	#info-contact {
+		& > div ul {
+			flex-direction: column;
+			li { margin-bottom: 30px !important; }
+		}
+	}
+	#situation {
+		.city {
+			flex-direction: column;
+			& > * { margin: 0 !important; }
+			& > div { margin-top: 30px !important; }
+			& + div {
+				flex-direction: column;
+				& > div {
+					margin: 0 !important;
+					text-align: left !important;
+				}
+				.infraestructures { margin-bottom: 30px !important;}
+			}
+		}
+		.conclusion {
+			flex-direction: column;
+			& > div:first-child { margin: 0 0 30px 0 !important; }
+		}
+	}
+}
+
+@media screen and (max-width: 360px) {
+	header #responsive-header {
+		right: 10px;
+	}
+	#description h5 { font-size: 16px; }
 }
